feat: rename enum, add filterOption entity and dto, optimize criteria builder
Took 1 hour 34 minutes